Fixed CSS for dropdown

--- a/assets/scss/_base.scss
+++ b/assets/scss/_base.scss
@@ -10,7 +10,7 @@ button,
 iframe,
 [tabindex],
 [contentEditable="true"] {
-  &:not([disabled]):focus {
+  &:not([disabled]):focus:not(.autocomplete__option) {
     @include focus();
   }
 }
