--- a/views/macros/dropdown.njk
+++ b/views/macros/dropdown.njk
@@ -1,7 +1,7 @@
 {% macro dropdown(key, values, selectedValue, question, errors, attributes) %}
     <script type="text/javascript" src="{{ asset('/js/accessible-autocomplete.min.js') }}"></script>
     <!--<link rel="stylesheet" href="assets/css/accessible-autocomplete.min.css" />-->
-    <div class="{{ 'has-error' if errors and errors[key] }}">
+    <div class="{{ 'has-error' if errors and errors[key] }} outline-none">
         <fieldset class="fieldset">
             <legend class="fieldset__legend">
                 {% if attributes.required %}<strong aria-hidden="true" class="required font-normal">*</strong>{% endif %} {{ question }} {% if attributes.required %} <strong class="required font-normal">{{ __("required")}}</strong>{% endif %}
@@ -19,14 +19,14 @@
                 </span>
             {% endif %}
             <div id="{{ key }}">
-            <select id="location-picker">
+            <select id="location-picker" name="{{ key }}" class="no-focus">
                 <option id="default"
                         value=""
                         ></option>
                 {% for item in values | sort(attribute="text") %}
                 {% set itemId %}{{ key }}{{ item.value }}{%endset%}
                     <option id="{{ itemId }}"
-                        name="{{ key }}"
+                        name="{{ itemId }}"
                         value="{{ item.value }}"
                         {% if errors and errors[key] %}
                             aria-describedby="{{ key + '-error' }}"
@@ -44,6 +44,6 @@
     selectElement: document.querySelector('#location-picker'),
     showAllValues: true,
     showNoOptionsFound: false,
-    default: ''
+    defaultValue: ''
   })</script>
 {% endmacro %}
