--- a/assets/scss/components/_dropdown.scss
+++ b/assets/scss/components/_dropdown.scss
@@ -34,7 +34,7 @@
 }
 
 .autocomplete__menu {
-  @apply bg-black text-white border-2 border-black m-0 max-w-full overflow-x-hidden pt-0 pb-0 px-2 border-t-0;
+  @apply border-2 border-black  m-0 max-w-full overflow-x-hidden pt-0 pb-0 px-2 border-t-0;
 }
 
 .autocomplete__menu--visible {
