--- a/views/macros/dropdown.njk
+++ b/views/macros/dropdown.njk
@@ -25,7 +25,7 @@
       <div id="{{ key }}">
       <select id="{{ key }}-select" name="{{ key }}" class="no-focus">
           <option id="default" value=""></option>
-          {%- for item in values | sort(attribute="text") -%}
+          {%- for item in values | normalizedSort("text", getLocale()) -%}
             {% set itemId %}{{ key }}{{ item.value }}{%endset%}
             <option name="{{ itemId }}"
                 value="{{ item.value }}"
