Adding french files

--- a/views/benefits/dtc_allowance-fr.njk
+++ b/views/benefits/dtc_allowance-fr.njk
@@ -7,14 +7,14 @@
 {% endblock %}
 
 {% block featured_list_items %}
-  {{ benefitLi("<strong>$100 one-time, tax-free payment</strong> if you receive both the Disability Tax Credit and the <strong>Allowance or the Allowance for the Survivor.</strong>") }}
-  {{ benefitLi("<strong>Automatic payment starting August 10, 2020.</strong>") }}
+  {{ benefitLi("") }}
+  {{ benefitLi("") }}
 {% endblock %}
 
 {% block body %}
-  <strong>Good to know:</strong>
+  <strong>Bon à savoir :</strong>
   <ul>
-    <li>Payments will be sent automatically, as soon as possible. You don’t need to do anything to receive it.</li>
+    <li>Les paiements seront déposés automatiquement dès que possible. Vous n’avez pas à faire quoi que ce soit pour le recevoir.</li>
   </ul>
 {% endblock %}
 
