Fixing html validation error on feedback macro

--- a/views/_includes/feedback.njk
+++ b/views/_includes/feedback.njk
@@ -14,7 +14,7 @@
             {{ __('feedback.question') }}
           </legend>
 
-          <div class="multiple-choice multiple-choice--checkboxes" id="">
+          <div class="multiple-choice multiple-choice--checkboxes" >
             <div class="multiple-choice__item">
                 <input id="incorrect_info" name="problems" type="checkbox" value="incorrect_info">
                 <label for="incorrect_info">{{ __('feedback.1') }}</label>
