--- a/views/base.njk
+++ b/views/base.njk
@@ -29,7 +29,7 @@
     </head>
     <body>
         <!-- Google Tag Manager (noscript) -->
-        <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-MTM7CPP"
+        <noscript><iframe aria-hidden="true" title="GTM" src="https://www.googletagmanager.com/ns.html?id=GTM-MTM7CPP"
         height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <!-- End Google Tag Manager (noscript) -->
         <nav>
