--- a/views/benefits/ccb_payment-en.njk
+++ b/views/benefits/ccb_payment-en.njk
@@ -7,8 +7,8 @@
 {% endblock %}
 
 {% block featured_list_items %}
-  {{ benefitLi("Automatic payment in May") }}
-  {{ benefitLi("$300 per child") }}
+  {{ benefitLi("<strong>Automatic payment in May</strong>") }}
+  {{ benefitLi("<strong>$300 per child</strong>") }}
 {% endblock %}
 
 {% block body %}
