--- a/views/benefits/ccb_payment-fr.njk
+++ b/views/benefits/ccb_payment-fr.njk
@@ -7,8 +7,8 @@
 {% endblock %}
 
 {% block featured_list_items %}
-  {{ benefitLi("Versement automatique au mois de mai ") }}
-  {{ benefitLi("300 $ par enfant ") }}
+  {{ benefitLi("<strong>Versement automatique au mois de mai</strong>") }}
+  {{ benefitLi("<strong>300 $ par enfant</strong>") }}
 {% endblock %}
 
 {% block body %}
