--- a/views/benefits/cerb-en.njk
+++ b/views/benefits/cerb-en.njk
@@ -7,9 +7,9 @@
 {% endblock %}
 
 {% block featured_list_items %}
-  {{ benefitLi("$500 per week") }}
-  {{ benefitLi("Up to 16 weeks", "if you keep  meeting the eligibility criteria") }}
-  {{ benefitLi("First payment within 10 days of applying") }}
+  {{ benefitLi("<strong>$500 per week</strong>") }}
+  {{ benefitLi("<strong>Up to 16 weeks</strong> if you keep  meeting the eligibility criteria") }}
+  {{ benefitLi("<strong>First payment within 10 days of applying</strong>") }}
 {% endblock %}
 
 {% block body %}
