--- a/views/benefits/cerb-fr.njk
+++ b/views/benefits/cerb-fr.njk
@@ -7,9 +7,9 @@
 {% endblock %}
 
 {% block featured_list_items %}
-  {{ benefitLi("500 $ par semaine") }}
-  {{ benefitLi("Jusqu’à 16 semaines", "tant que vous répondez aux critères d’admissibilité") }}
-  {{ benefitLi("À recevoir au plus tard 10 jours après la demande") }}
+  {{ benefitLi("<strong>500 $ par semaine</strong>") }}
+  {{ benefitLi("<strong>Jusqu’à 16 semaines</strong> tant que vous répondez aux critères d’admissibilité") }}
+  {{ benefitLi("<strong>À recevoir au plus tard 10 jours après la demande</strong>") }}
 {% endblock %}
 
 {% block body %}
