--- a/views/benefits/ei_workshare-en.njk
+++ b/views/benefits/ei_workshare-en.njk
@@ -7,8 +7,8 @@
 {% endblock %}
 
 {% block featured_list_items %}
-  {{ benefitLi("Receive EI benefits") }}
-  {{ benefitLi("Up to 76 weeks") }}
+  {{ benefitLi("<strong>Receive EI benefits</strong>") }}
+  {{ benefitLi("<strong>Up to 76 weeks</strong>") }}
 {% endblock %}
 
 {% block body %}
