--- a/views/benefits/ei_workshare-fr.njk
+++ b/views/benefits/ei_workshare-fr.njk
@@ -7,8 +7,8 @@
 {% endblock %}
 
 {% block featured_list_items %}
-  {{ benefitLi("Recevoir des prestations d’assurance-emploi") }}
-  {{ benefitLi("Pendant 76 semaines maximum") }}
+  {{ benefitLi("<strong>Recevoir des prestations d’assurance-emploi</strong>") }}
+  {{ benefitLi("<strong>Pendant 76 semaines maximum</strong>") }}
 {% endblock %}
 
 {% block body %}
