--- a/views/benefits/gst_credit-fr.njk
+++ b/views/benefits/gst_credit-fr.njk
@@ -7,9 +7,9 @@
 {% endblock %}
 
 {% block featured_list_items %}
-  {{ benefitLi("Versement automatique au mois d’avril si vous recevez déjà le crédit pour la TPS") }}
-  {{ benefitLi("En moyenne :<br> 400 $ pour les célibataires<br>600 $ pour les couples") }}
-  {{ benefitLi("Le montant du crédit dépend de votre revenu pour l’année imposable 2018") }}
+  {{ benefitLi("<strong>Versement automatique au mois d’avril si vous recevez déjà le crédit pour la TPS</strong>") }}
+  {{ benefitLi("<strong>En moyenne :<br> 400 $ pour les célibataires<br>600 $ pour les couples</strong>") }}
+  {{ benefitLi("<strong>Le montant du crédit dépend de votre revenu pour l’année imposable 2018</strong>") }}
 {% endblock %}
 
 {% block body %}
