--- a/views/benefits/mortgage_deferral-en.njk
+++ b/views/benefits/mortgage_deferral-en.njk
@@ -7,7 +7,7 @@
 {% endblock %}
 
 {% block featured_list_items %}
-  {{ benefitLi("Skip mortgage payments until you’re able to pay again") }}
+  {{ benefitLi("<strong>Skip mortgage payments until you’re able to pay again</strong>") }}
 {% endblock %}
 
 {% block body %}
