--- a/views/benefits/mortgage_deferral-fr.njk
+++ b/views/benefits/mortgage_deferral-fr.njk
@@ -7,7 +7,7 @@
 {% endblock %}
 
 {% block featured_list_items %}
-  {{ benefitLi("Interrompez vos paiements hypothécaires jusqu’à ce que vous puissiez les payer à nouveau") }}
+  {{ benefitLi("<strong>Interrompez vos paiements hypothécaires jusqu’à ce que vous puissiez les payer à nouveau</strong>") }}
 {% endblock %}
 
 {% block body %}
