--- a/views/benefits/student_loan-fr.njk
+++ b/views/benefits/student_loan-fr.njk
@@ -7,8 +7,8 @@
 {% endblock %}
 
 {% block featured_list_items %}
-  {{ benefitLi("Les paiements sont automatiquement suspendus") }}
-  {{ benefitLi("Du 30 mars 2020 jusqu’au 30 septembre 2020") }}
+  {{ benefitLi("<strong>Les paiements sont automatiquement suspendus</strong>") }}
+  {{ benefitLi("<strong>Du 30 mars 2020 jusqu’au 30 septembre 2020</strong>") }}
 {% endblock %}
 
 {% block body %}
