--- a/views/benefits/oas-fr.njk
+++ b/views/benefits/oas-fr.njk
@@ -7,11 +7,11 @@
 {% endblock %}
 
 {% block featured_list_items %}
-  {{ benefitLi("Paiement unique de 300 $, non imposable, si vous êtes admissible à la pension de la Sécurité de vieillesse (SV)
-    <br><br>
-    OU paiement unique de 500 $, non imposable, si vous recevez le supplément de revenu garanti (SRG)
-    <br><br>
-    OU paiement unique de 500 $, non imposable, si vous recevez L’Allocation ou l’Allocation au survivant") }}
+  {{ benefitLi("<ul>
+      <li class='mb-4'><strong>Paiement unique de 300 $, non imposable, si vous êtes admissible à la pension de la Sécurité de vieillesse (SV)</strong></li>
+      <li class='mb-4'><strong>OU paiement unique de 500 $, non imposable, si vous recevez le supplément de revenu garanti (SRG)</strong></li>
+      <li><strong>OU paiement unique de 500 $, non imposable, si vous recevez L’Allocation ou l’Allocation au survivant</strong></li>
+    </ul>") }}
   {{ benefitLi("<strong>Dès le 6 juillet 2020</strong>") }}
 {% endblock %}
 
