--- a/views/benefits/student_financial_aid-en.njk
+++ b/views/benefits/student_financial_aid-en.njk
@@ -11,12 +11,12 @@
 {% endblock %}
 
 {% block featured_list_items %}
-  {{ benefitLi("Up to $6,000 in grants for full-time students") }}
-  {{ benefitLi("Up to $3,600 in grants for part-time students") }}
-  {{ benefitLi("Doubling grants for students with dependants") }}
-  {{ benefitLi("Doubling grants for students with permanent disabilities") }}
-  {{ benefitLi("Removing expected contributions from students and spouses") }}
-  {{ benefitLi("Up to $350 for the weekly amount in student loans") }}
+  {{ benefitLi("<strong>Up to $6,000 in grants for full-time students</strong>") }}
+  {{ benefitLi("<strong>Up to $3,600 in grants for part-time students</strong>") }}
+  {{ benefitLi("<strong>Doubling grants for students with dependants</strong>") }}
+  {{ benefitLi("<strong>Doubling grants for students with permanent disabilities</strong>") }}
+  {{ benefitLi("<strong>Removing expected contributions from students and spouses</strong>") }}
+  {{ benefitLi("<strong>Up to $350 for the weekly amount in student loans</strong>") }}
 {% endblock %}
 
 {% block body %}
