--- a/views/benefits/student_financial_aid-fr.njk
+++ b/views/benefits/student_financial_aid-fr.njk
@@ -11,12 +11,12 @@
 {% endblock %}
 
 {% block featured_list_items %}
-  {{ benefitLi("Jusqu’à 6000 $ en bourses pour les étudiants à temps plein") }}
-  {{ benefitLi("Jusqu’à 3600 $ en bourses pour les étudiants à temps partiel") }}
-  {{ benefitLi("Doublement des montants des bourses canadiennes pour étudiants qui ont des personnes à charge") }}
-  {{ benefitLi("Doublement des montants des bourses canadiennes pour étudiants qui ont une incapacité permanente") }}
-  {{ benefitLi("Exemption de la contribution de l’étudiant et de l’époux") }}
-  {{ benefitLi("Jusqu’à 350 $ par semaine pour les prêts étudiants") }}
+  {{ benefitLi("<strong>Jusqu’à 6000 $ en bourses pour les étudiants à temps plein</strong>") }}
+  {{ benefitLi("<strong>Jusqu’à 3600 $ en bourses pour les étudiants à temps partiel</strong>") }}
+  {{ benefitLi("<strong>Doublement des montants des bourses canadiennes pour étudiants qui ont des personnes à charge</strong>") }}
+  {{ benefitLi("<strong>Doublement des montants des bourses canadiennes pour étudiants qui ont une incapacité permanente</strong>") }}
+  {{ benefitLi("<strong>Exemption de la contribution de l’étudiant et de l’époux</strong>") }}
+  {{ benefitLi("<strong>Jusqu’à 350 $ par semaine pour les prêts étudiants</strong>") }}
 {% endblock %}
 
 {% block body %}
