--- a/views/benefits/student_loan-en.njk
+++ b/views/benefits/student_loan-en.njk
@@ -7,8 +7,8 @@
 {% endblock %}
 
 {% block featured_list_items %}
-  {{ benefitLi("Payments automatically paused") }}
-  {{ benefitLi("From March 30, 2020 until September 30, 2020") }}
+  {{ benefitLi("<strong>Payments automatically paused</strong>") }}
+  {{ benefitLi("<strong>From March 30, 2020 until September 30, 2020</strong>") }}
 {% endblock %}
 
 {% block body %}
