--- a/views/macros/benefit-result.njk
+++ b/views/macros/benefit-result.njk
@@ -1,10 +1,8 @@
-{% macro benefitLi(strongText, text) %}
+{% macro benefitLi(text) %}
   <li>
     <div>
-      <p>
         <img src="{{ asset('/img/check-circle.svg') }}" alt="">
-        <strong>{{ strongText | safe }}</strong> {% if text %}{{ text }}{% endif %}
-      </p>
+         {% if text %}{{ text | safe }}{% endif %}
     </div>
   </li>
 {% endmacro %}
