--- a/views/benefits/dtc_oas-fr.njk
+++ b/views/benefits/dtc_oas-fr.njk
@@ -9,14 +9,18 @@
 {% endblock %}
 
 {% block featured_list_items %}
-  {{ benefitLi("<ul> <li class='mb-2'><strong>$300 one-time, tax-free payment</strong> if you receive both the Disability Tax Credit and <strong>Old Age Security.</strong></li> <li><strong>OR $100 one-time, tax-free payment</strong> if you receive both the Disability Tax Credit and the <strong>Guaranteed Income Supplement.</strong></li> </ul>") }}
-  {{ benefitLi("<strong>Automatic payment starting August 10, 2020.</strong>") }}
+  {{ benefitLi("<ul>
+  <li class='mb-2'><strong>Paiement unique de 300 $, non imposable</strong> si vous recevez la <strong>pension de la Sécurité de vieillesse.</strong></li>
+  <li><strong>OU paiement unique de 100 $, non imposable</strong> si vous recevez le crédit d'impôt pour personnes handicapées et le <strong>supplément de revenu garanti.</strong> </li>
+  </ul>") }}
+  {{ benefitLi("") }}
 {% endblock %}
 
 {% block body %}
-  <strong>Good to know:</strong>
+  <strong>Bon à savoir :</strong>
   <ul>
-    <li>Payments will be sent automatically, as soon as possible. You don’t need to do anything to receive it.</li>
+    <li>Ce paiement peut aider si vous détenez un certificat valide pour le crédit d'impôt pour personnes handicapées.</li>
+    <li>Les paiements seront déposés automatiquement dès que possible. Vous n’avez pas à faire quoi que ce soit pour le recevoir. /li>
   </ul>
 {% endblock %}
 
