--- a/views/benefits/dtc-en.njk
+++ b/views/benefits/dtc-en.njk
@@ -8,13 +8,14 @@
 {% endblock %}
 
 {% block featured_list_items %}
-  {{ benefitLi("<strong>$600 one-time, tax-free payment</strong> if you receive the Disability Tax Credit.") }}
+  {{ benefitLi("<strong>$600 one-time, tax-free payment.</strong>") }}
   {{ benefitLi("<strong>Automatic payment starting August 10, 2020.</strong>") }}
 {% endblock %}
 
 {% block body %}
   <strong>Good to know:</strong>
   <ul>
+    <li>This payment can help if you hold a valid certificate for the Disability Tax Credit.</li>
     <li>Payments will be sent automatically, as soon as possible. You don’t need to do anything to receive it.</li>
   </ul>
 {% endblock %}
