--- a/views/benefits/dtc_allowance-en.njk
+++ b/views/benefits/dtc_allowance-en.njk
@@ -7,13 +7,14 @@
 {% endblock %}
 
 {% block featured_list_items %}
-  {{ benefitLi("<strong>$100 one-time, tax-free payment</strong> if you receive both the Disability Tax Credit and the <strong>Allowance or the Allowance for the Survivor.</strong>") }}
+  {{ benefitLi("<strong>$100 one-time, tax-free payment</strong> if you receive <strong>The Allowance or the Allowance for the Survivor.</strong>") }}
   {{ benefitLi("<strong>Automatic payment starting August 10, 2020.</strong>") }}
 {% endblock %}
 
 {% block body %}
   <strong>Good to know:</strong>
   <ul>
+    <li>This payment can help if you hold a valid certificate for the Disability Tax Credit.</li>
     <li>Payments will be sent automatically, as soon as possible. You don’t need to do anything to receive it.</li>
   </ul>
 {% endblock %}
