--- a/views/benefits/dtc_allowance-fr.njk
+++ b/views/benefits/dtc_allowance-fr.njk
@@ -7,21 +7,22 @@
 {% endblock %}
 
 {% block featured_list_items %}
-  {{ benefitLi("") }}
-  {{ benefitLi("") }}
+  {{ benefitLi("<strong>Paiement unique de 100 $, non imposable</strong> si vous recevez l’Allocation ou l’Allocation au survivant.") }}
+  {{ benefitLi("Les paiements automatiques débutent le 10 août 2020.") }}
 {% endblock %}
 
 {% block body %}
   <strong>Bon à savoir :</strong>
   <ul>
-    <li>Les paiements seront déposés automatiquement dès que possible. Vous n’avez pas à faire quoi que ce soit pour le recevoir.</li>
+    <li>Ce paiement peut aider si vous détenez un certificat valide pour le crédit d'impôt pour personnes handicapées.</li>
+    <li>Les paiements seront déposés automatiquement dès que possible. Vous n’avez pas à faire quoi que ce soit pour le recevoir. </li>
   </ul>
 {% endblock %}
 
 {% block info_link %}
   {{ infoLink(
     "dtc_allowance",
-    "https://www.canada.ca/en/revenue-agency/services/tax/individuals/segments/tax-credits-deductions-persons-disabilities/disability-tax-credit.html",
-    "Learn more about the Disability Tax Credit"
+    "https://www.canada.ca/fr/agence-revenu/services/impot/particuliers/segments/deductions-credits-impot-personnes-handicapees/credit-impot-personnes-handicapees.html",
+    "En savoir plus à propos du crédit d'impôt pour personnes handicapées "
   )}}
 {% endblock %}
