--- a/views/benefits/dtc_child-en.njk
+++ b/views/benefits/dtc_child-en.njk
@@ -9,15 +9,16 @@
 {% endblock %}
 
 {% block featured_list_items %}
-  {{ benefitLi("<strong>$600 one-time, tax-free payment</strong> if your child receives the Disability Tax Credit.") }}
+  {{ benefitLi("<strong>$600 one-time, tax-free payment.</strong>") }}
   {{ benefitLi("<strong>Automatic payment starting August 10, 2020.</strong>") }}
 {% endblock %}
 
 {% block body %}
   <strong>Good to know:</strong>
   <ul>
+    <li>This payment can help if your child holds a valid certificate for the Disability Tax Credit.</li>
     <li>Payments will be sent automatically, as soon as possible. You don’t need to do anything to receive it.</li>
-    <li>If you share custody for the child receiving the Disability Tax Credit, this payment will be split $300 to each parent.</li>
+    <li>If you share custody for your child, this payment will be split $300 to each parent.</li>
   </ul>
 {% endblock %}
 
