--- a/views/benefits/dtc_oas-en.njk
+++ b/views/benefits/dtc_oas-en.njk
@@ -9,14 +9,17 @@
 {% endblock %}
 
 {% block featured_list_items %}
-  {{ benefitLi("<ul> <li class='mb-2'><strong>$300 one-time, tax-free payment</strong> if you receive both the Disability Tax Credit and <strong>Old Age Security.</strong></li> <li><strong>OR $100 one-time, tax-free payment</strong> if you receive both the Disability Tax Credit and the <strong>Guaranteed Income Supplement.</strong></li> </ul>") }}
-  {{ benefitLi("<strong>Automatic payment starting August 10, 2020.</strong>") }}
+  {{ benefitLi("<ul>
+    <li class="mb-2"><strong>$300 one-time, tax-free payment</strong> if you receive <strong>Old Age Security.</strong></li>
+    <li><strong>OR $100 one-time, tax-free payment</strong> if you receive the <strong>Guaranteed Income Supplement.</strong></li>
+  </ul>") }}
+  {{ benefitLi("Automatic payment starting August 10, 2020.") }}
 {% endblock %}
 
 {% block body %}
   <strong>Good to know:</strong>
   <ul>
-    <li>Payments will be sent automatically, as soon as possible. You don’t need to do anything to receive it.</li>
+    <li></li>
   </ul>
 {% endblock %}
 
