--- a/views/benefits/dtc_oas-fr.njk
+++ b/views/benefits/dtc_oas-fr.njk
@@ -13,7 +13,7 @@
   <li class='mb-2'><strong>Paiement unique de 300 $, non imposable</strong> si vous recevez la <strong>pension de la Sécurité de vieillesse.</strong></li>
   <li><strong>OU paiement unique de 100 $, non imposable</strong> si vous recevez le crédit d'impôt pour personnes handicapées et le <strong>supplément de revenu garanti.</strong> </li>
   </ul>") }}
-  {{ benefitLi("") }}
+  {{ benefitLi("<strong>Les paiements automatiques débutent le 10 août 2020</strong>") }}
 {% endblock %}
 
 {% block body %}
@@ -27,7 +27,7 @@
 {% block info_link %}
   {{ infoLink(
     "dtc_oas",
-    "https://www.canada.ca/en/revenue-agency/services/tax/individuals/segments/tax-credits-deductions-persons-disabilities/disability-tax-credit.html",
-    "Learn more about the Disability Tax Credit"
+    "https://www.canada.ca/fr/agence-revenu/services/impot/particuliers/segments/deductions-credits-impot-personnes-handicapees/credit-impot-personnes-handicapees.html",
+    "En savoir plus à propos du crédit d'impôt pour personnes handicapées"
   )}}
 {% endblock %}
