--- a/views/benefits/dtc_oas-en.njk
+++ b/views/benefits/dtc_oas-en.njk
@@ -10,7 +10,7 @@
 
 {% block featured_list_items %}
   {{ benefitLi("<ul>
-    <li class="mb-2"><strong>$300 one-time, tax-free payment</strong> if you receive <strong>Old Age Security.</strong></li>
+    <li class='mb-2'><strong>$300 one-time, tax-free payment</strong> if you receive <strong>Old Age Security.</strong></li>
     <li><strong>OR $100 one-time, tax-free payment</strong> if you receive the <strong>Guaranteed Income Supplement.</strong></li>
   </ul>") }}
   {{ benefitLi("Automatic payment starting August 10, 2020.") }}
@@ -19,7 +19,8 @@
 {% block body %}
   <strong>Good to know:</strong>
   <ul>
-    <li></li>
+    <li>This payment can help if you hold a valid certificate for the Disability Tax Credit.</li>
+    <li>Payments will be sent automatically, as soon as possible. You don’t need to do anything to receive it.</li>
   </ul>
 {% endblock %}
 
