Rolling  ack oas change (be fixed in another pr)

--- a/views/benefits/oas-en.njk
+++ b/views/benefits/oas-en.njk
@@ -7,9 +7,13 @@
 {% endblock %}
 
 {% block featured_list_items %}
-  {{ benefitLi("<ul><li class='mb-2'>$300 one-time, tax-free payment if you are eligible for the Old Age Security (OAS) pension</li>
-      <li class='mb-2'>OR $500 one-time, tax-free payment if you receive the Guaranteed Income Supplement (GIS)</li>
-      <li>OR $500 one-time, tax-free payment if you receive the Allowance or the Allowance for the Survivor</li></ul>") }}
+  {{ benefitLi("
+      $300 one-time, tax-free payment if you are eligible for the Old Age Security (OAS) pension
+      <br/><br/>
+      OR $500 one-time, tax-free payment if you receive the Guaranteed Income Supplement (GIS)
+      <br/><br/>
+      OR $500 one-time, tax-free payment if you receive the Allowance or the Allowance for the Survivor
+      ") }}
   {{ benefitLi("<strong>Starting July 6, 2020</strong>") }}
 {% endblock %}
 
