decoupled javascript from dropdown macro

--- a/routes/question-province/question-province.njk
+++ b/routes/question-province/question-province.njk
@@ -33,3 +33,7 @@
     </div>
 
 {% endblock %}
+
+{% block scripts %}
+    <script type="text/javascript" src="{{ asset('/dist/js/province.js') }}"></script>
+{% endblock %}
