--- a/views/benefits/oas-en.njk
+++ b/views/benefits/oas-en.njk
@@ -7,11 +7,13 @@
 {% endblock %}
 
 {% block featured_list_items %}
-  {{ benefitLi("$300 one-time, tax-free payment if you are eligible for the Old Age Security (OAS) pension
-      <br><br>
+  {{ benefitLi("
+      $300 one-time, tax-free payment if you are eligible for the Old Age Security (OAS) pension
+      <br/><br/>
       OR $500 one-time, tax-free payment if you receive the Guaranteed Income Supplement (GIS)
-      <br><br>
-      OR $500 one-time, tax-free payment if you receive the Allowance or the Allowance for the Survivor") }}
+      <br/><br/>
+      OR $500 one-time, tax-free payment if you receive the Allowance or the Allowance for the Survivor
+      ") }}
   {{ benefitLi("<strong>Starting July 6, 2020</strong>") }}
 {% endblock %}
 
