Working on back button

--- a/views/_includes/back-link.njk
+++ b/views/_includes/back-link.njk
@@ -1,5 +1,5 @@
 <div class="">
-  <a href="/back" class="inline-block">
-    <img src="{{ asset('/img/arrow-circle-left.svg') }}" alt="" class="w-6 h-6" />{{__('button.back')}}
+  <a href="/back" class="">
+    <img src="{{ asset('/img/arrow-circle-left.svg') }}" alt="" class="w-6 h-6 inline-block" /><span class="inline-block">{{__('button.back')}}</span>
   </a>
 </div>
