--- a/views/_includes/back-link.njk
+++ b/views/_includes/back-link.njk
@@ -1,5 +1,5 @@
-<div class="">
+<div class="mb-10 md:mb-6 -mt-6">
   <a href="/back" class="">
-    <img src="{{ asset('/img/arrow-circle-left.svg') }}" alt="" class="w-6 h-6 inline-block" /><span class="inline-block">{{__('button.back')}}</span>
+    <img src="{{ asset('/img/arrow-circle-left.svg') }}" alt="" class="w-6 h-6 inline-block md:-mt-1" /><span class="inline-block ml-3 underline">{{__('button.back')}}</span>
   </a>
 </div>
