#minor Feature/province list (#523)
* Replaced radio buttons with dropdown

* Added default blank text

* Fixed CSS for dropdown

* Added endpoint testing

* Fixing Colours

Inverting autocomplete menu, adding a black border.

* Fix issue where selected value doesn't display

* Remove the legend replace with a valid input

* Cleaning up macro

* Adding a filter to do a localized sort

* Renaming to localizedSort

* Adding test for localized sort

* Fixing e2e tests

Adding a new command for entering inputs on the page
Added a helper function to help out with the way we've localized the
resultss tests.

* decoupled javascript from dropdown macro

* removed a script tag that I forgot to last commit

* Adding server side back button

* Working on back button

* Fixing css removing backbuttonjs

* Removing back button when no session

* Fixed bug with no history

* Removing from history on any backstep

* Added no-cache to force firefox to always get new pages from server

* clear history when returning to the app

* adding a comment

* Fixed issue with clearing history

* Added tests, cleaned up code

* Adding environment variable to fix a11y test

* Updated changelog

* removed some commented out code

* removed some more commented out code

* moved header config to middleware folder and added a test

* added unit test for history helper. removed a middleware that didn't do anything

Co-authored-by: Calvin Rodo <calvin.rodo@cds-snc.ca>
Co-authored-by: var-kyle <kyle.meelker@gmail.com>

--- a/routes/question-province/question-province.njk
+++ b/routes/question-province/question-province.njk
@@ -7,7 +7,7 @@
         {% call form() %}
             <input type="hidden" name="_csrf" value="{{ csrfToken }}">
 
-            {{ radioButtons('province',
+            {{ dropdown('province',
                 [
                     { value: 'ab', text:__('province.ab')},
                     { value: 'bc', text:__('province.bc')},
@@ -32,4 +32,8 @@
         {% endcall %}
     </div>
 
+{% endblock %}
+
+{% block scripts %}
+    <script type="text/javascript" src="{{ asset('/dist/js/province.js') }}"></script>
 {% endblock %}
