--- a/views/base.njk
+++ b/views/base.njk
@@ -2,6 +2,7 @@
 {%- from 'input-text.njk' import textInput as textInput with context -%}
 {%- from 'input-textarea.njk' import textArea as textArea with context -%}
 {%- from 'radios.njk' import radioButtons as radioButtons with context -%}
+{%- from 'dropdown.njk' import dropdown as dropdown with context -%}
 {%- from 'checkboxes.njk' import checkBoxes as checkBoxes with context -%}
 {%- from 'buttons.njk' import formButtons as formButtons with context -%}
 {%- from 'input-file.njk' import fileInput as fileInput with context -%}
@@ -38,7 +39,7 @@
             </header>
             <main id="content">
                 {% if not hideBackButton %}
-                    {% include "_includes/back-link.njk" %}
+                  {% include "_includes/back-link.njk" %}
                 {% endif %}
                 {% if errors %}
                     {% include "_includes/errorList.njk" %}
