removed duplicate back button on results page and aligned it with the start over button

--- a/routes/results/results.njk
+++ b/routes/results/results.njk
@@ -7,12 +7,11 @@
 
 {% block content %}
 
-    <div class="flex flex-row">
-        {% include "_includes/back-link.njk" %}
+    {# <div class="flex flex-row">
         <div class="inline -mt-12">
             <a class="ml-6 py-3 button-link transparent" href="/clear"><img src="{{ asset('/img/times-circle.svg') }}" class="h-6 w-6" alt="" /><span>{{ __('start_over') }}</span></a>
         </div>
-    </div>
+    </div> #}
 
     <h1>{{ __('results.header') }}</h1>
 
