--- a/views/_includes/back-link.njk
+++ b/views/_includes/back-link.njk
@@ -1,5 +1,9 @@
-<div class="mb-10 md:mb-6 -mt-6">
-  <a href="/back" class="">
+{# <a href="/back" class="ml-6 py-3 button-link transparent inline">
+  <img src="{{ asset('/img/arrow-circle-left.svg') }}" alt="" class="w-6 h-6 inline-block md:-mt-1" /><span class="inline-block ml-3 underline">{{__('button.back')}}</span>
+</a> #}
+
+{# <div class="-mt-12"> #}
+  <a href="/back" class="button-link py-3 transparent">
     <img src="{{ asset('/img/arrow-circle-left.svg') }}" alt="" class="w-6 h-6 inline-block md:-mt-1" /><span class="inline-block ml-3 underline">{{__('button.back')}}</span>
   </a>
-</div>
+{# <div> #}
