--- a/views/base.njk
+++ b/views/base.njk
@@ -38,12 +38,12 @@
                 {% include "_includes/fip.njk" %}
             </header>
             <main id="content">
-                <div class="flex flex-row -mt-6 md:mb-6">
+                <div class="-mt-6">
                     {% if not hideBackButton %}
                         {% include "_includes/back-link.njk" %}
                     {% endif %}
                     {% if showStartOver %}
-                        <a class="ml-6 py-3 button-link transparent" href="/clear"><img src="{{ asset('/img/times-circle.svg') }}" class="h-6 w-6" alt="" /><span>{{ __('start_over') }}</span></a>
+                        <a class="py-3 button-link transparent" href="/clear"><img src="{{ asset('/img/times-circle.svg') }}" class="h-6 w-6" alt="" /><span>{{ __('start_over') }}</span></a>
                     {% endif %}
                 </div>
                 {% if errors %}
