--- a/views/base.njk
+++ b/views/base.njk
@@ -38,9 +38,14 @@
                 {% include "_includes/fip.njk" %}
             </header>
             <main id="content">
-                {% if not hideBackButton %}
-                  {% include "_includes/back-link.njk" %}
-                {% endif %}
+                <div class="-mt-6">
+                    {% if not hideBackButton %}
+                        {% include "_includes/back-link.njk" %}
+                    {% endif %}
+                    {% if showStartOver %}
+                        <a class="py-3 button-link transparent" href="/clear"><img src="{{ asset('/img/times-circle.svg') }}" class="h-6 w-6" alt="" /><span>{{ __('start_over') }}</span></a>
+                    {% endif %}
+                </div>
                 {% if errors %}
                     {% include "_includes/errorList.njk" %}
                 {% endif %}
