fixed a little bug with front end js loading. changed error focus to div, rather than link

--- a/views/_includes/errorList.njk
+++ b/views/_includes/errorList.njk
@@ -1,4 +1,4 @@
-<div class="error-list" role="alert">
+<div class="error-list" role="alert" tabindex="0">
     <h2 class="error-list__header">{{ __('Please correct the errors on the page') }}</h2>
     <ol data-cy="errors" class="error-list__list" id="formErrors">
         {% for field, error in errors %}
